# Manifold

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Model_Mesh.cpp  Model_OBJ.cpp  Model_OBJ.h  main.cpp
